--- a/pind/templates/pind/login.html
+++ b/pind/templates/pind/login.html
@@ -8,11 +8,13 @@
 
     <h2>🛡 Tizimga kirish</h2>
 
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Kirish</button>
-    </form>
+    <form method="post" action="{% url 'login' %}">
+  {% csrf_token %}
+  <input type="text" name="username">
+  <input type="password" name="password">
+  <button type="submit">Login</button>
+</form>
+
 
 </body>
 </html>
